--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ html,body{
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
-	width: 40%;
+	/* width: 40%; */
 }
 
 .screen {		
